fixgap

--- a/src/scss/featuers.scss
+++ b/src/scss/featuers.scss
@@ -59,11 +59,11 @@
 
     .featuresText {
         font-size: 20px;
-        width: 662px;
+        width: 456px;
     }
 
     .featuresItems {
-        gap: 45px;
+        gap: 60px;
     }
 
     .featuresItems:nth-child(even) {
